[package]
name = "read_range"
version = "0.1.0"
edition = "2024"
description = "A portable and efficient crate for reading a specific range of bytes from a file. Provides both sync/async APIs and uses concurrent-safe positional I/O."
authors = ["Cody Wyatt Neiman (xangelix) <neiman@cody.to>"]
license = "MIT"
documentation = "https://docs.rs/read_range"
repository = "https://github.com/xangelix/read_range"
keywords = ["file", "io", "read", "range", "async"]
categories = [
    "filesystem",
    "asynchronous",
    "concurrency",
    "os::unix-apis",
    "os::windows-apis",
]

[dependencies]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["rt"], default-features = false }
